--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>コーダー道場長野</title>
+        <title>コーダー道場長野非公式</title>
         <script src="js/kaunt.js"></script><script src="js/lodin.js"></script>
 <link rel="stylesheet" href="CSS/header.css">
 <link rel="stylesheet" href="CSS/text-font.css">
@@ -29,7 +29,7 @@
             <a class="menuB" href="blog.html">ブログ</a>
         </header>
         <br>
-       
+       <h2 style=text-angle:center>こちらのサイトは、非公式です。</h2>
         <h2 class="kaisai1" style="text-align: center;">次回の開催日は</h2>
         <a href="compassR.html"><h1 class="kaisai2">11月17日予定です</h1></a>
        
